--- a/projetos.html
+++ b/projetos.html
@@ -66,7 +66,7 @@
                           <div class="card-body"><h5>ALS Glance</h5> 
                             <p class="card-text">Star schema of patient EMG data to speed up analysis. OData Web Api to provide
                               data in agnostic manner.<br>Client application consumes data provided by the Api and shows the
-                              patient resume.<br><br><b>Financiamento : 50.000 euros</b></p>
+                              patient resume.<br><br><b>Financiamento: 50.000 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c37359.pdf" role="button">Ver</a>
@@ -83,7 +83,8 @@
                           <div class="card-body">
                             <h5>Big Data</h5>
                             <p class="card-text">Análise e processamento distribuído de redes de grande
-                              dimensão (Big Data).<br> Biblioteca de algoritmos sobre grafos segundo o modelo BSP. Código independente da plataforma </p>
+                              dimensão (Big Data).<br> Biblioteca de algoritmos sobre grafos segundo o modelo BSP. Código independente da plataforma 
+                              <br><br><b>Financiamento: 76.200 €</b> </p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/BIGDATA.pdf" role="button">Ver</a>
@@ -99,7 +100,7 @@
                           <div class="card-body">
                             <h5>ASCA</h5>
                             <p class="card-text">O objetivo do projeto ASCA é a implementação de um sistema que tenha a capacidade de interagir com os 
-                              diferentes módulos que possibilitem a simulação do comportamento de dispositivos semicondutores.</p>
+                              diferentes módulos que possibilitem a simulação do comportamento de dispositivos semicondutores.<br><br><b>Financiamento: 95.122 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c2617126221.542a96b52bfe3.pdf" role="button">Ver</a>
@@ -116,7 +117,7 @@
                           <div class="card-body">
                             <h5>BookSmarTk</h5>
                             <p class="card-text">Organizador Pessoal de documentos suportado por classificação automática. Custo temporal elevado ao classificar e 
-                              organizar manualmente.</p>
+                              organizar manualmente.<br><br><b>Financiamento: 20.250 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c308243991.542a91608f8ef.pdf" role="button">Ver</a>
@@ -132,7 +133,7 @@
                           <div class="card-body">
                             <h5>BookSmarTk</h5>
                             <p class="card-text">With MyTv you can create your own tv channel, define what´s on it and broadcast it to other users, or you 
-                              can just lay down and watch any broadcats avalilable</p>
+                              can just lay down and watch any broadcats avalilable <br><br><b>Financiamento: 12.150 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c284993335735894.pdf" role="button">Ver</a>
@@ -148,7 +149,7 @@
                           <div class="card-body">
                             <h5>Jukebox</h5>
                             <p class="card-text">Sistema que disponibiliza as funcionalidade de um jukebox para estabelecimentos comerciais <br>Engenharia 
-                              Informática e Computadores, ADEETC - 2012/2013</p>
+                              Informática e Computadores, ADEETC - 2012/2013<br><br><b>Financiamento: 27.800 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c326133353935411.542a8fe64f66b.pdf" role="button">Ver</a>
@@ -165,7 +166,8 @@
                           <div class="card-body">
                             <h5>Patinhas</h5>
                             <p class="card-text">Plataforma Web para adoção de animais de estimação.Criação de perfis de animais, visualização de animais para 
-                              adoção, integração com redes sociais, subscrição de newsletters e pesquisa de características</p>
+                              adoção, integração com redes sociais, subscrição de newsletters e pesquisa de características
+                              <br><br><b>Financiamento: 100.200 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c2867136894.pdf" role="button">Ver</a>
@@ -181,7 +183,7 @@
                           <div class="card-body">
                             <h5>Stream Shaker</h5>
                             <p class="card-text">Define o que vais publicar e como vais processar, subscreve os resultados que pretendes obter, publica os 
-                              eventos que queres processar e serás noticado na ocorrência de resultados</p>
+                              eventos que queres processar e serás noticado na ocorrência de resultados <br><br><b>Financiamento: 37.050 €</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c373153731937535.pdf" role="button">Ver</a>
@@ -201,7 +203,7 @@
                               Informação actualizada sobre Séries Televisivas;
                               Rede Social STracker;
                               API Pública;
-                              
+                              <br><br><b>Financiamento: 88.290 €</b>
                               </p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
